--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/TheLifeOfSeo/LectureService#readme",
   "devDependencies": {
     "ejs": "^3.1.8",
+    "express": "^4.14.1",
     "nodemon": "^2.0.16",
-    "express" : "^4.14.1"
+    "react": "^18.1.0"
   }
 }
