--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "Server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "./node_modules/nodemon/bin/nodemon.js server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "ejs": "^3.1.8",
     "express": "^4.14.1",
     "nodemon": "^2.0.16",
-    "react": "^18.1.0"
+    "react": "^18.1.0",
+    "yarn": "^1.22.18"
   }
 }
