--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "lectureservice",
-  "version": "1.0.0",
-  "description": "서도원 김상일 윤승재 이광희",
-  "main": "Server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/nodemon/bin/nodemon.js server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TheLifeOfSeo/LectureService.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TheLifeOfSeo/LectureService/issues"
-  },
-  "homepage": "https://github.com/TheLifeOfSeo/LectureService#readme",
-  "devDependencies": {
-    "ejs": "^3.1.8",
-    "express": "^4.14.1",
-    "nodemon": "^2.0.16",
-    "yarn": "^1.22.18"
-  },
-  "dependencies": {
-    "fast-csv": "^4.3.6",
-    "mysql": "^2.18.1",
-    "sass": "^1.52.2",
-    "sql": "^0.78.0"
-  }
+    "name": "lectureservice",
+    "version": "1.0.0",
+    "description": "서도원 김상일 윤승재 이광희",
+    "main": "Server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "./node_modules/nodemon/bin/nodemon.js ./server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/TheLifeOfSeo/LectureService.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/TheLifeOfSeo/LectureService/issues"
+    },
+    "homepage": "https://github.com/TheLifeOfSeo/LectureService#readme",
+    "devDependencies": {
+        "ejs": "^3.1.8",
+        "express": "^4.14.1",
+        "nodemon": "^2.0.16",
+        "yarn": "^1.22.18"
+    },
+    "dependencies": {
+        "fast-csv": "^4.3.6",
+        "mysql": "^2.18.1",
+        "sass": "^1.52.2",
+        "sql": "^0.78.0"
+    }
 }
